# django-agent

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  pyproject.toml  runtests.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
django_agent/: __init__.py  admin.py  agent.py  apps.py  code_access.py  middleware.py  models.py  registry.py  settings.py  urls.py  vertex.py  views.py
django_agent/migrations/: 0001_initial.py  0002_message_thought_signature.py
django_agent/static/django_agent/: widget.css  widget.js
docs/: architecture.md  spec.html
tests/: __init__.py  test_agent.py  test_code_access.py  test_live.py  test_registry.py
