[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "django-agent"
description = "An embeddable LLM assistant for the Django admin, with automatic CRUD over your models and a Gemini (Vertex AI) backend."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Seenka" }]
maintainers = [{ name = "Seenka" }]
keywords = ["django", "admin", "llm", "agent", "assistant", "gemini", "vertex-ai", "copilot"]
dynamic = ["version"]
dependencies = [
    "Django>=4.2",
    "google-genai>=0.3",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/SeenkaMedia/django-agent"
Repository = "https://github.com/SeenkaMedia/django-agent"
Issues = "https://github.com/SeenkaMedia/django-agent/issues"
Changelog = "https://github.com/SeenkaMedia/django-agent/blob/main/CHANGELOG.md"

[tool.setuptools.dynamic]
version = { attr = "django_agent.__version__" }

[tool.setuptools.packages.find]
include = ["django_agent*"]

[tool.setuptools.package-data]
django_agent = ["templates/**/*", "static/**/*"]
